# copyicons

./: CMakeLists.txt  README.md
src/: file.c  file.h  init.c  init.h  main.c  main.h  pfs.c
